[package]
name = "pclass-parser"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/pclass-parser"
documentation = "https://github.com/phodal/pclass-parser"
homepage = "https://github.com/phodal/pclass-parser"
description = """
https://github.com/phodal/pclass-parser
"""
categories = ["text-processing"]
exclude = [
    "_fixtures",
    "docs",
    ".github",
    ".travis.yml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.class-parser]
path = "./class-parser"
version = "0.1.0"

[dependencies.classfile]
path = "./classfile"
version = "0.1.0"

[workspace]
members = [
    "classfile",
    "class-parser",
]
